# 20min

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  CHANGELOG  Cargo.toml  Makefile  README.rst
.cargo-husky/hooks/: pre-commit
.github/: dependabot.yml
.tool/: setup-kcov
.tools/: check-kcov
src/: config.rs  lib.rs  main.rs  ticker.rs
test/: args.rs  opts.rs  test.rs
tests/: integration_test.rs
tools/: build-kcov  check-kcov  ci-runner  setup-gitlab-ci-multi-runner
