[package]
name = "twenty-minutes"
description = """\
A command line working timer. \
"""
version = "0.0.1"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
edition = "2018"
homepage = "https://gitlab.com/grauwoelfchen/20min"
readme = "README.rst"
keywords = []
categories = [
  "command-line-utilities",
]
documentation = "https://20min.yasha.rs"
repository = "https://gitlab.com/grauwoelfchen/20min"
license = "Apache-2.0"

exclude = [
  ".git",
  ".github",
  ".cargo-husky",
  ".cache",
  "Makefile",
  "rust-toolchain",
  ".env",
  ".env.ci.sample",
  ".gitignore",
  ".clippy.toml",
  ".rustfmt.toml",
  ".gitlab-ci.yml",
]

[lib]
name = "twenty_minutes"
path = "src/lib.rs"

[[bin]]
name = "20min"
path = "src/main.rs"

[[test]]
name = "e2e"
path = "test/test.rs"

[profile.release]
panic = "abort"

[dependencies]
structopt = { version = "0.2.18", default-features = false }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
